welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:27: error: ')' expected but '}' found.
  }
  ^Array2:31: error: ')' expected but '}' found.
                     } 
                     ^